# MeManga

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Guide.md  README.md  SECURITY.md  build.py  build_app.py  compose.yaml  config.example.yaml  config.py  download_queue.sh  downloader.py  emailer.py  memanga.py  memanga.spec  pyproject.toml  pytest.ini  requirements-docker.txt  requirements-lock.txt  requirements.txt  run.sh  run_queue.sh  setup.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scraper_broken.md
.github/workflows/: docker-image.yml  release.yml  test.yml
docs/: Guide.md  SUPPORTED_SOURCES.md
docs/screenshots/: .gitkeep
examples/: config.example.yaml  state.example.json
memanga/: __init__.py  __main__.py  backup.py  cli.py  config.py  cron.py  downloader.py  emailer.py  perf.py  search.py  state.py  suspicion.py
memanga/gui/: __init__.py  __main__.py  _subprocess.py  app.py  cache.py  cover_fallback.py  events.py  network_status.py  theme.py  workers.py
memanga/scrapers/: __init__.py  ajimenoippo.py  akiramanga.py  aoashimanga.py  asurascans.py  azmanga.py  bakidou.py  bakirahen.py  bananafishmanga.py  base.py  beastarsmanga.py  beckmanga.py  berserkmanga.py  berserkmangorg.py  blackclova.py  blamamanga.py  blamemanga.py  bleachmangaorg.py  bleachread.py  blueboxmangaonline.py  blueexorcistmanga.py  blueexorcistonline.py  bluelockmangaorg.py  bluelockreadcom.py  bluelockreadonline.py  bluelockreadww2.py  bocchitherockmanga.py  callofthenight.py  caseclosedonline.py  centuriya.py  chainsawdevil.py  coffeemanga.py  comick.py  comix.py  dandadananim.py  dandadanmanganet.py  dddmanga.py  deathnotemanga.py  deathnotemangafree.py  demonslayermanga.py  (+180 more)
packaging/: icon.icns  memanga-dev.spec  memanga-release.spec
scrapers/: __init__.py  base.py  batoto.py  mangabuddy.py  mangadex.py  manganato.py  mangapill.py  tcbscans.py  weebcentral.py
scripts/: generate_icon.py  run.sh
scripts/linux/: setup.sh
scripts/windows/: run.bat  setup.bat
tests/: README.md  conftest.py  requirements-test.txt
tests/integration/: test_download_flow.py  test_issue_regressions.py  test_keyboard_shortcuts.py  test_modal_flow.py  test_theme_switch.py
tests/scrapers/: conftest.py  test_base_helpers.py  test_laiond_cdn_family.py  test_mangadex_api.py  test_manganato_kakalot.py  test_mangapark.py  test_mangapill.py  test_mangosm_family.py  test_nuxt_ssr_family.py  test_og_image_meta_family.py  test_playwright_scrapers.py  test_readmanga_family.py  test_registry_coverage.py  test_tcbscans.py  test_wp_madara_family.py
tests/unit/: test_backup.py  test_config.py  test_cron.py  test_downloader.py  test_downloader_pipeline.py  test_emailer.py  test_emailer_pipeline.py  test_perf.py  test_search.py  test_state.py  (+2 more)
(+122 files in other folders)
