[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memanga"
version = "0.1.0"
description = "Automatic manga downloader with Kindle support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "img2pdf>=0.5.0",
    "Pillow>=10.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "cloudscraper>=1.2.71",
    "pikepdf>=8.0.0",
    "keyring>=24.0.0",
    "playwright-stealth>=1.0.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
memanga = "memanga.cli:main"
memanga-gui = "memanga.gui:launch_gui"

[tool.setuptools.packages.find]
include = ["memanga*"]
