[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memanga"
version = "0.3.0"
description = "Automatic manga downloader with Kindle support (CLI)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "img2pdf>=0.5.0",
    "Pillow>=10.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "cloudscraper>=1.2.71",
    "pikepdf>=8.0.0",
    "keyring>=24.0.0",
    "pywin32-ctypes>=0.2.0; sys_platform == 'win32'",
    "certifi>=2024.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.1.0",
]

[project.scripts]
memanga = "memanga.cli:main"

[tool.setuptools.packages.find]
include = ["memanga*"]
